--- a/src/style.css
+++ b/src/style.css
@@ -4,15 +4,22 @@
 
 
 @layer base{
+    html{
+        @apply scroll-smooth;
+    }
     body{
         padding: 0;
         margin: 0;
         box-sizing: border-box;
-        font-family: 'Source Serif Pro', serif;
+        font-family: 'roboto', serif;
     }
 }
 
 @layer components{
+
+    .titule-secondary{
+        @apply font-medium text-2xl tracking-wider uppercase;
+    }
 
     .bg-body{
         background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(9,2,51,1) 50%, rgba(0,0,0,1) 100%);
@@ -36,7 +43,7 @@
     }
 
     .under-line-nav{
-        @apply inline-block transition-all duration-300 hover:text-color-secondary relative after:-bottom-0.5 after:left-0 after:absolute after:w-0 after:h-0.5 after:bg-color-secondary after:ease-[cubic-bezier(0.25,0.8,0.25,1)] after:duration-500 after:transition-[width,left] hover:after:w-full hover:after:left-0
+        @apply inline-block text-xl transition-all duration-300 hover:text-[#ffffff] relative after:-bottom-0.5 after:left-0 after:absolute after:w-0 after:h-0.5 after:bg-[#ffffff] after:ease-[cubic-bezier(0.25,0.8,0.25,1)] after:duration-500 after:transition-[width,left] hover:after:w-full hover:after:left-0
     }
 
 
@@ -63,16 +70,90 @@
     }
 
     .social-network-icon{
-        @apply text-color-primary text-3xl transition-all delay-200 group-hover:scale-0 group-hover:text-4xl group-hover:delay-200;
+        @apply text-[#A5C5E9] text-3xl transition-all delay-200 group-hover:scale-0 group-hover:text-4xl group-hover:delay-200;
     }
 
     .social-network-span{
-        @apply  absolute text-color-secondary text-xl uppercase scale-0 transition-all duration-500 delay-0 group-hover:scale-100 group-hover:delay-200;
+        @apply  absolute text-[#ffffff] text-lg uppercase scale-0 transition-all duration-500 delay-0 group-hover:scale-100 group-hover:delay-200;
+    }
+
+    .skills{
+        @apply relative grid place-items-center w-36 h-36;
+    }
+    .base{
+        @apply 
+        w-full h-full 
+        rounded-[50%] 
+        border-4 
+        border-[var(--color)] 
+        border-l-8 
+        border-l-transparent
+        animate-skills
+        after:absolute
+        after:w-[25px]
+        after:h-[25px]
+        after:top-2
+        after:left-2
+        after:rounded-[50%]
+        after:bg-[var(--color)]
+        ;
+    }
+    
+    .base,
+    .title,
+    .icon{
+        @apply absolute cursor-pointer;
     }
 
 
 
+    .title{
+        @apply uppercase text-xl font-bold tracking-[2px] pointer-events-auto drop-shadow-[0_0_2px_var(--color)] animate-wave;
+    }
 
+    .level{
+        @apply absolute uppercase text-xl font-bold tracking-[2px] pointer-events-auto transition-all duration-500 ease-in-out rotate-level animate-wave;
+    }
 
+    .icon{
+        @apply grid place-items-center text-[50px] h-full pointer-events-none;
+    }
+
+    .base{
+        @apply drop-shadow-[0_0_10px_var(--color)];
+    }
+     
+    .base + .title + .icon  {
+        @apply rotate-base-title-icon text-[var(--color)] drop-shadow-[0_0_3px_var(--color)] animate-wave;
+    }
+
+    .rotate-base-title-icon{
+        transform: rotateY(30deg) skewY(-24deg) translateY(-130px);
+    }
+
+    .base + .title {
+        @apply rotate-base-icon;
+    }
+    .rotate-base-icon{
+        transform: rotateY(30deg) skewY(-24deg) translateY(-70px);
+    }
+
+    .rotate-level{
+        transform: rotateY(30deg) skewY(-24deg) translateY(80px) ;
+    }
+
+    .glitch{
+        @apply after:glitch-move after:absolute after:top-0 after:left-0 after:right-0 after:bottom-0 after:block after:animate-glitch;
+    }
+
+    .glitch-move{
+        --move1: inset(50% 50% 50% 50%);
+        --move2: inset(31% 0 40% 0);
+        --move3: inset(39% 0 15% 0);
+        --move4: inset(45% 0 40% 0);
+        --move5: inset(45% 0 6% 0);
+        --move6: inset(14% 0 61% 0);
+        clip-path: var(--move1);
+    }
 }
 
